# wechatemoji

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  TAURI_MIGRATION.md  WeChatEmoji2Feishu.spec  bridge_common.py  build.bat  config.py  feishu_uploader.py  gui.py  key_extractor.py  main.py  pyproject.toml  requirements.txt  sniff_feishu.py  stage_playwright_runtime.py  tauri_bridge.py  wechat_extractor.py  wechatemoji.spec
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
scripts/: generate_cartoon_brand_assets.py
tauri_app/: README.md  package-lock.json  package.json
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/icons/: icon.icns
tauri_app/src-tauri/src/: lib.rs  main.rs
web/: index.html  tauri-bridge.js
