[package]
name = "wechatemoji_tauri"
version = "0.1.0"
description = "WeChat Emoji -> Feishu Tauri shell"
authors = ["justin"]
edition = "2021"

[lib]
name = "wechatemoji_tauri_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
