[package]
name = "wechatemoji_tauri"
version = "0.1.0"
description = "Tauri desktop shell for WeChatEmoji"
authors = ["Tian Haishun and contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tianhaishun/wechatemoji"
homepage = "https://github.com/tianhaishun/wechatemoji"

[lib]
name = "wechatemoji_tauri_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
